<resources>
    <string name="app_name">Bazaar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log in</string>
    <string name="username"> Username</string>
    <string name="password"> Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="click_here">Click here</string>
    <string name="new_to_bazaar">New to Bazaar?</string>
    <string name="sign_up">Sign Up</string>
    <string name="usernameerrortext"> </string>
    <string name="passworderrortext"> </string>
    <string name="email_hint_edittext" />
    <string name="email_hint_edittext_constant">Email</string>
    <string name="firstname_hint_edittext" />
    <string name="lastname_hint_edittext" />
    <string name="full_name_constant">Full name</string>
    <string name="last_name_constant">Last Name</string>
    <string name="already_have_account_constant">Already have account?</string>
    <string name="phone_number">Phone Number</string>
    <string name="logo_of_application">Logo of application</string>
    <string name="forgot_password_constant">Forgot password</string>
    <string name="forgotpassword_instructions_constant">We will send you an email with instructions on how to reset your password.</string>
    <string name="email_me">Email me</string>
    <string name="order_now">Order Now</string>
    <string name="my_market">My Market</string>
    <string name="my_fares">My Fares</string>
    <string name="timeline">Timeline</string>
    <string name="profile_picture_description">Profile picture description</string>
    <string name="profile_settings">Profile settings</string>
    <string name="save_changes">Save changes</string>
    <string name="this_button_open_form_for_product_add">This button open form for product add</string>
    <string name="search">Search</string>
    <string name="search_long">Search by product name</string>
    <string name="delete_item_menu_string">Delete item</string>
    <string name="active">ACTIVE</string>
    <string name="give_us_details_about_your_fare">Give us details about your fare</string>
    <string name="title">Title</string>
    <string name="price_amount">Price / Amount</string>
    <string name="description">Description</string>
    <string name="amount_type">Amount type</string>
    <string name="price_type">Price type</string>
    <string name="amount">Amount</string>
    <string name="add_item">ADD ITEM</string>
    <string name="rating">Rating</string>
    <string name="register">Register</string>
    <string name="registerTitle">Register</string>
    <string name="ongoing_sales">Ongoing Sales</string>
    <string name="ongoing_orders">Ongoing Orders</string>
    <string name="change_data_btn">Change Data</string>
    <string-array name="spinner_items">
        <item>Incoming</item>
        <item>Accepted</item>
        <item>Declined</item>
        <item>Delivering</item>
        <item>Delivered</item>
    </string-array>
</resources>