<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="149dp"
        android:layout_height="54dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_bazaar_logo_coloured"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutInside"
        android:layout_width="359dp"
        android:layout_height="503dp"
        android:layout_marginTop="20dp"
        android:background="@color/B_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/username_hint_textview_login_fragment"
            android:layout_width="283dp"
            android:layout_height="wrap_content"
            android:text="@string/usernameerrortext"
            android:textColor="@color/from_error_orange"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/edittext_name_login_fragment"
            app:layout_constraintTop_toBottomOf="@+id/edittext_name_login_fragment" />

        <TextView
            android:id="@+id/textView_login_fragment"
            android:layout_width="283dp"
            android:layout_height="0dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="40dp"
            android:text="@string/log_in"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline11"
            app:layout_constraintStart_toStartOf="@+id/guideline10"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edittext_name_login_fragment"
            android:layout_width="283dp"
            android:layout_height="58dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/textview_border"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:paddingStart="15dp"
            android:textColor="@color/B_white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/textView_login_fragment"
            app:layout_constraintTop_toBottomOf="@+id/textView_login_fragment" />

        <EditText
            android:id="@+id/edittext_password_login_fragment"
            android:layout_width="283dp"
            android:layout_height="58dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/textview_border"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:textColor="@color/B_white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/username_hint_textview_login_fragment"
            app:layout_constraintTop_toBottomOf="@+id/edittext_name_login_fragment" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_login_fragment"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="283dp"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:backgroundTint="@color/turqoise"
            android:text="@string/log_in"
            android:textColor="@color/B_dark"
            app:layout_constraintStart_toStartOf="@+id/password_hint_textview_login_fragment"
            app:layout_constraintTop_toTopOf="@+id/guideline5"
            app:rippleColor="@color/B_dark" />

        <TextView
            android:id="@+id/password_hint_textview_login_fragment"
            android:layout_width="283dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/passworderrortext"
            android:textColor="@color/from_error_orange"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/edittext_password_login_fragment"
            app:layout_constraintTop_toBottomOf="@+id/edittext_password_login_fragment"
            app:layout_constraintVertical_bias="0.0" />

        <View
            android:id="@+id/view3"
            android:layout_width="250dp"
            android:layout_height="1dp"
            android:layout_marginBottom="100dp"
            android:background="@color/hintColorGray"
            app:layout_constraintBottom_toTopOf="@+id/guideline7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:text="@string/forgot_password"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/button_login_fragment"
            app:layout_constraintTop_toBottomOf="@+id/button_login_fragment" />

        <TextView
            android:id="@+id/forgot_Password_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="40dp"
            android:clickable="true"
            android:onClick="forgotPassword"
            android:text="@string/click_here"
            android:textColor="@color/turqoise"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/button_login_fragment"
            app:layout_constraintTop_toBottomOf="@+id/button_login_fragment" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginTop="28dp"
            android:text="@string/new_to_bazaar"
            android:textColor="@color/hintColorGray"
            app:layout_constraintEnd_toStartOf="@+id/guideline11"
            app:layout_constraintStart_toStartOf="@+id/guideline10"
            app:layout_constraintTop_toBottomOf="@+id/view3" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up_button_login_fragment"

            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="283dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"

            android:text="@string/sign_up"
            android:textColor="@color/B_white"
            app:layout_constraintStart_toStartOf="@+id/button_login_fragment"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:rippleColor="@color/B_dark"
            app:strokeColor="@color/B_white" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp"
            app:layout_constraintGuide_percent="0.5" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="41dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8953771" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
